force-app/main/default/objects/Account/fields/Badge_Item_Count__c.field-meta.xml
<CustomField>
    <fullName>Badge_Item_Count__c</fullName>
    <formula>IF(NOT(ISBLANK(Company_Org_Chart_Received__c)),1,0) + 
IF(Process_Flow_Implemented__c,1,0) + 
IF(OR(NOT(ISBLANK(Press_Release__c)),NOT(ISBLANK( Video_Direct_Link_Implementation__c)),NOT(ISBLANK( Video_Direct_Link_Other__c)),NOT(ISBLANK( Video_Direct_Link_Testimonial__c)))  ,1,0) + 
IF( ISN_on_Website_Intranet__c ,1,0) +
IF(NOT(ISBLANK(Has_Data_Feed__c)),1,0) + 
IF( Dallas_Workshop_Held__c ,1,0) + 
IF( Contractor_List_Update_in_Last_12_Months__c ,1,0) + 
IF( (Number_of_Subscribed_Sites__c / Number_of_Sites__c ) &gt;= 0.7,1,0) + 
IF(A_Grade_Conformance__c &gt;= 0.4,1,0) + 
IF( Subscription_Compliance_Calculated__c &gt;= 0.9,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Healthy Account Badge Item Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>