force-app/main/default/objects/Account/fields/BCS_Checklist_Items_Complete__c.field-meta.xml
<CustomField>
    <fullName>BCS_Checklist_Items_Complete__c</fullName>
    <formula>IF((Badge_Item_Count__c/10)&lt;0.30,1,
IF((Badge_Item_Count__c/10)&lt;0.50,2,
IF((Badge_Item_Count__c/10)&lt;0.60,3,
IF((Badge_Item_Count__c/10)&lt;0.70,4,5))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BCS - Checklist Items Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>