force-app/main/default/objects/Account/fields/BCS_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>BCS_Last_Update__c</fullName>
    <label>BCS - Last Update</label>
    <type>Date</type>
</CustomField>