force-app/main/default/objects/Account/fields/BCS_Metrics_Meeting__c.field-meta.xml
<CustomField>
    <fullName>BCS_Metrics_Meeting__c</fullName>
    <formula>IF((Today()-Date_of_Last_Metrics_Meeting__c)&lt;365,5,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BCS - Metrics Meeting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>