force-app/main/default/objects/Account/fields/BCS_References__c.field-meta.xml
<CustomField>
    <fullName>BCS_References__c</fullName>
    <formula>IF(Number_of_References__c&gt;0,5,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BCS - References</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>