force-app/main/default/objects/Account/fields/BCS_Total__c.field-meta.xml
<CustomField>
    <fullName>BCS_Total__c</fullName>
    <label>BCS - Total</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>