force-app/main/default/objects/Account/fields/BCS_Total_Contractors__c.field-meta.xml
<CustomField>
    <fullName>BCS_Total_Contractors__c</fullName>
    <formula>IF(ISN_Company_Record__r.TotalContractors__c&lt;250,1,
IF(ISN_Company_Record__r.TotalContractors__c&lt;500,2,
IF(ISN_Company_Record__r.TotalContractors__c&lt;1000,3,
IF(ISN_Company_Record__r.TotalContractors__c&lt;2000,4,5))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BCS - Total Contractors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>