force-app/main/default/objects/Account/fields/BCS_Unique_Contractor_Percent__c.field-meta.xml
<CustomField>
    <fullName>BCS_Unique_Contractor_Percent__c</fullName>
    <formula>IF(OR(ISNULL(ISN_Company_Record__r.TotalContractors__c),ISN_Company_Record__r.TotalContractors__c = 0),1,
IF((ISN_Company_Record__r.Unique_Contractors__c/ISN_Company_Record__r.TotalContractors__c)&lt;0.015,1,
IF((ISN_Company_Record__r.Unique_Contractors__c/ISN_Company_Record__r.TotalContractors__c)&lt;0.030,2,
IF((ISN_Company_Record__r.Unique_Contractors__c/ISN_Company_Record__r.TotalContractors__c)&lt;0.060,3,
IF((ISN_Company_Record__r.Unique_Contractors__c/ISN_Company_Record__r.TotalContractors__c)&lt;0.120,4,5)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BCS - Unique Contractor Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>