force-app/main/default/objects/Account/fields/BCS_Unique_Contractors__c.field-meta.xml
<CustomField>
    <fullName>BCS_Unique_Contractors__c</fullName>
    <formula>IF(ISN_Company_Record__r.Unique_Contractors__c&lt;5,1,
IF(ISN_Company_Record__r.Unique_Contractors__c&lt;15,2,
IF(ISN_Company_Record__r.Unique_Contractors__c&lt;30,3,
IF(ISN_Company_Record__r.Unique_Contractors__c&lt;60,4,5))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BCS - Unique Contractors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>