force-app/main/default/objects/Account/fields/BCS_Vertical_Rank_Value__c.field-meta.xml
<CustomField>
    <fullName>BCS_Vertical_Rank_Value__c</fullName>
    <formula>VALUE(TEXT(BCS_Vertical_Rank__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BCS - Vertical Rank (Value)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>