force-app/main/default/objects/Account/fields/Best_Practices_Guide_Sent__c.field-meta.xml
<CustomField>
    <fullName>Best_Practices_Guide_Sent__c</fullName>
    <label>Best Practices Guide Sent</label>
    <type>Date</type>
</CustomField>