force-app/main/default/objects/Account/fields/Biggest_Challenges_with_Account__c.field-meta.xml
<CustomField>
    <fullName>Biggest_Challenges_with_Account__c</fullName>
    <label>Biggest Challenges with Account</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>