force-app/main/default/objects/Account/fields/Billing_Employee_Count__c.field-meta.xml
<CustomField>
    <fullName>Billing_Employee_Count__c</fullName>
    <description>Determines the Tier that Contractor and Hiring Client Employer subscriptions are billed at.</description>
    <formula>IF (RAVS_Employee__c &lt; 1,
MAX( Avg_Employee_Initial__c , MSQ_Employee__c , RAVS_Employee__c , HCE_Employee__c ),
MAX( MSQ_Employee__c , RAVS_Employee__c , HCE_Employee__c )
)
+ Hierarchy_Employee_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Avg Employee # is not considered when there is a RAVS Employee #</inlineHelpText>
    <label>Billing Employee Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>