force-app/main/default/objects/Account/fields/Billing_Tier__c.field-meta.xml
<CustomField>
    <fullName>Billing_Tier__c</fullName>
    <label>Billing Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Billing_Tier</valueSetName>
    </valueSet>
</CustomField>