force-app/main/default/objects/Account/fields/Billing_Tier_Formula_Deprecated__c.field-meta.xml
<CustomField>
    <fullName>Billing_Tier_Formula_Deprecated__c</fullName>
    <formula>IF ( ISPICKVAL(Hierarchy_Type__c, &#39;Secondary&#39;), &#39;Hierarchy&#39; ,
	IF ( Billing_Employee_Count__c &gt;= 2500 , &#39;Tier 11&#39;,
		IF ( Billing_Employee_Count__c &gt;= 1000 , &#39;Tier 10&#39;,
			IF ( Billing_Employee_Count__c &gt;= 500 , &#39;Tier 9&#39;,
				IF ( Billing_Employee_Count__c &gt;= 250 , &#39;Tier 8&#39;,
					IF ( Billing_Employee_Count__c &gt;= 100 , &#39;Tier 7&#39;,
						IF ( Billing_Employee_Count__c &gt;= 50 , &#39;Tier 6&#39;,
							IF ( Billing_Employee_Count__c &gt;= 25, &#39;Tier 5&#39;,	
								IF ( Billing_Employee_Count__c &gt;= 20 , &#39;Tier 4&#39;,
									IF ( Billing_Employee_Count__c &gt;= 10 , &#39;Tier 3&#39;,
										IF ( Billing_Employee_Count__c &gt;= 5 , &#39;Tier 2&#39;,
											IF ( Billing_Employee_Count__c &gt;= 1 , &#39;Tier 1&#39;,
												&#39;Incomplete&#39;
												)
											)
										)
									)
								)
							)
						)
					)
				)
			)
		)
	)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Tier Formula (Deprecated)</label>
    <type>Text</type>
</CustomField>