force-app/main/default/objects/Account/fields/Business_Units__c.field-meta.xml
<CustomField>
    <fullName>Business_Units__c</fullName>
    <label>Business Units</label>
    <summaryForeignKey>Business_Unit__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>