force-app/main/default/objects/Account/fields/Buying_Process__c.field-meta.xml
<CustomField>
    <fullName>Buying_Process__c</fullName>
    <label>Buying Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Buying_Process</valueSetName>
    </valueSet>
</CustomField>