force-app/main/default/objects/Account/fields/C_E_Account_Name_ID__c.field-meta.xml
<CustomField>
    <fullName>C_E_Account_Name_ID__c</fullName>
    <label>C/E Account Name(s) &amp; ID(s)</label>
    <type>TextArea</type>
</CustomField>