force-app/main/default/objects/Account/fields/Case_Study_Description__c.field-meta.xml
<CustomField>
    <fullName>Case_Study_Description__c</fullName>
    <label>Case Study Description</label>
    <type>TextArea</type>
</CustomField>