force-app/main/default/objects/Account/fields/Case_Study_Published__c.field-meta.xml
<CustomField>
    <fullName>Case_Study_Published__c</fullName>
    <formula>NOT(ISBLANK(Case_Study_Published_Date__c))</formula>
    <label>Case Study Published</label>
    <type>Checkbox</type>
</CustomField>