force-app/main/default/objects/Account/fields/Case_Study_Published_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Study_Published_Date__c</fullName>
    <inlineHelpText>Enter the date the Client&#39;s case study was published and made available for use.</inlineHelpText>
    <label>Case Study Published (Date)</label>
    <type>Date</type>
</CustomField>