force-app/main/default/objects/Account/fields/Case_Study_Sent__c.field-meta.xml
<CustomField>
    <fullName>Case_Study_Sent__c</fullName>
    <label>Case Study Sent</label>
    <type>Date</type>
</CustomField>