force-app/main/default/objects/Account/fields/CDev_Referral__c.field-meta.xml
<CustomField>
    <fullName>CDev_Referral__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CDev Referral</label>
    <type>Checkbox</type>
</CustomField>