force-app/main/default/objects/Account/fields/CDTS_Import_Name__c.field-meta.xml
<CustomField>
    <fullName>CDTS_Import_Name__c</fullName>
    <label>CDTS Import Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>