force-app/main/default/objects/Account/fields/Client_Count__c.field-meta.xml
<CustomField>
    <fullName>Client_Count__c</fullName>
    <formula>&#39;490&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Count</label>
    <type>Text</type>
</CustomField>