force-app/main/default/objects/Account/fields/Client_Email_Domain_s__c.field-meta.xml
<CustomField>
    <fullName>Client_Email_Domain_s__c</fullName>
    <inlineHelpText>Enter client email domains that support contractor management</inlineHelpText>
    <label>Client Email Domain(s)</label>
    <type>TextArea</type>
</CustomField>