force-app/main/default/objects/Account/fields/Client_Reference__c.field-meta.xml
<CustomField>
    <fullName>Client_Reference__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Reference</label>
    <type>Checkbox</type>
</CustomField>