force-app/main/default/objects/Account/fields/Client_Specific_Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>Client_Specific_Questionnaire__c</fullName>
    <label>Client Specific Questionnaire</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes - Updated Quarterly</fullName>
            </value>
            <value>
                <fullName>Yes - Updated Semi-Annually</fullName>
            </value>
            <value>
                <fullName>Yes - Updated Annually</fullName>
            </value>
            <value>
                <fullName>Yes - No Regular Updates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>