force-app/main/default/objects/Account/fields/Client_Unique_Password__c.field-meta.xml
<CustomField>
    <fullName>Client_Unique_Password__c</fullName>
    <inlineHelpText>Standard password format is Client Name and month/year implemented ISN 
e.g. PepsiCo1113 or Tesoro0914</inlineHelpText>
    <label>Client Unique Password</label>
    <length>55</length>
    <type>Text</type>
</CustomField>