force-app/main/default/objects/Account/fields/Commit_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Commit_Confidence__c</fullName>
    <label>Commit Confidence</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>