force-app/main/default/objects/Account/fields/Commodities__c.field-meta.xml
<CustomField>
    <fullName>Commodities__c</fullName>
    <inlineHelpText>Values depend on Primary Industry selected.</inlineHelpText>
    <label>Commodities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Industry__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Commodities</valueSetName>
    </valueSet>
</CustomField>