force-app/main/default/objects/Account/fields/Company_Org_Chart_Received__c.field-meta.xml
<CustomField>
    <fullName>Company_Org_Chart_Received__c</fullName>
    <description>Used to track annual update of org chart for account. Workflow triggers an email reminder from field at 1 yr anniversary.</description>
    <inlineHelpText>Upload a copy of the org chart in the Account Summaries section. The org chart can be drafted by ISN or by the Hiring Client and should outline the departments, management and key stakeholders within the organization.</inlineHelpText>
    <label>Company Org Chart Received</label>
    <type>Date</type>
</CustomField>