force-app/main/default/objects/Account/fields/Competitor_Functionality_ISN_Lacks__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Functionality_ISN_Lacks__c</fullName>
    <label>Competitor Functionality ISN Lacks</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>