force-app/main/default/objects/Account/fields/Competitor_Functionality_Used__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Functionality_Used__c</fullName>
    <label>Competitor Functionality Used</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Audits</fullName>
            </value>
            <value>
                <fullName>Contractor Management</fullName>
            </value>
            <value>
                <fullName>Contracts/Agreements</fullName>
            </value>
            <value>
                <fullName>Incident Management</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Online Training</fullName>
            </value>
            <value>
                <fullName>OQ - Contractors</fullName>
            </value>
            <value>
                <fullName>OQ - Internal Employees</fullName>
            </value>
            <value>
                <fullName>TQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>