force-app/main/default/objects/Account/fields/Competitor_Notes__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Notes__c</fullName>
    <inlineHelpText>Note any recent conversations, feedback, what&#39;s not working well with competitor, etc.</inlineHelpText>
    <label>Competitor Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>