force-app/main/default/objects/Account/fields/Competitor_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Renewal_Date__c</fullName>
    <inlineHelpText>Date of renewal for the competitor subscription. Reminder emails will go to the team email at 12, 6, and 3 months.</inlineHelpText>
    <label>Agreement Expiration Date (Competitor)</label>
    <type>Date</type>
</CustomField>