force-app/main/default/objects/Account/fields/Competitor_Weaknesses__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Weaknesses__c</fullName>
    <label>Competitor Weaknesses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>