force-app/main/default/objects/Account/fields/CompetitorAccount__c.field-meta.xml
<CustomField>
    <fullName>CompetitorAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Uses Competitor</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Competitor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Competitor)</relationshipLabel>
    <relationshipName>Accounts_Competitor</relationshipName>
    <type>Lookup</type>
</CustomField>