force-app/main/default/objects/Account/fields/Conformance_Project_Completed__c.field-meta.xml
<CustomField>
    <fullName>Conformance_Project_Completed__c</fullName>
    <label>Conformance Project Completed</label>
    <type>Date</type>
</CustomField>