force-app/main/default/objects/Account/fields/Consequences_Variance_Process_Enforced__c.field-meta.xml
<CustomField>
    <fullName>Consequences_Variance_Process_Enforced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consequences / Variance Process Enforced</label>
    <type>Checkbox</type>
</CustomField>