force-app/main/default/objects/Account/fields/Contact_Center__c.field-meta.xml
<CustomField>
    <fullName>Contact_Center__c</fullName>
    <description>Lists the CS call center that supports the customer</description>
    <inlineHelpText>Lists the CS call center that supports the customer</inlineHelpText>
    <label>Contact Center</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Contact_Center</valueSetName>
    </valueSet>
</CustomField>