force-app/main/default/objects/Account/fields/Contacts_Sharing_Info_with_CEs__c.field-meta.xml
<CustomField>
    <fullName>Contacts_Sharing_Info_with_CEs__c</fullName>
    <label>Contacts Sharing Info with CEs</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>