force-app/main/default/objects/Account/fields/Contractor_Count__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Count__c</fullName>
    <formula>&#39;60,000&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contractor Count</label>
    <type>Text</type>
</CustomField>