force-app/main/default/objects/Account/fields/Contractor_List_Old_Date__c.field-meta.xml
<CustomField>
    <fullName>Contractor_List_Old_Date__c</fullName>
    <label>Contractor List Old Date</label>
    <type>Date</type>
</CustomField>