force-app/main/default/objects/Account/fields/Contractor_List_Update_in_Last_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Contractor_List_Update_in_Last_12_Months__c</fullName>
    <formula>Date_of_Last_Contractor_List_Update__c &gt; (TODAY() - 365)</formula>
    <label>Contractor List Update in Last 12 Months</label>
    <type>Checkbox</type>
</CustomField>