force-app/main/default/objects/Account/fields/Contractor_Overlap_Complete__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Overlap_Complete__c</fullName>
    <label>Contractor Overlap Complete</label>
    <type>Date</type>
</CustomField>