force-app/main/default/objects/Account/fields/CPQ_DefaultCatalogid__c.field-meta.xml
<CustomField>
    <fullName>CPQ_DefaultCatalogid__c</fullName>
    <label>Default Catalog Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>