force-app/main/default/objects/Account/fields/CPQ_DefaultPricebookId__c.field-meta.xml
<CustomField>
    <fullName>CPQ_DefaultPricebookId__c</fullName>
    <label>Default Pricebook Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>