force-app/main/default/objects/Account/fields/CVENT_Survey_Response_Rate_15__c.field-meta.xml
<CustomField>
    <fullName>CVENT_Survey_Response_Rate_15__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CVENT Survey Response Rate &gt;=15%</label>
    <type>Checkbox</type>
</CustomField>