force-app/main/default/objects/Account/fields/Dallas_Workshop__c.field-meta.xml
<CustomField>
    <fullName>Dallas_Workshop__c</fullName>
    <inlineHelpText>Enter the date of the FIRST Dallas Workshop</inlineHelpText>
    <label>Dallas Workshop</label>
    <type>Date</type>
</CustomField>