force-app/main/default/objects/Account/fields/Dallas_Workshop_Held__c.field-meta.xml
<CustomField>
    <fullName>Dallas_Workshop_Held__c</fullName>
    <formula>not(isblank( Dallas_Workshop__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dallas Workshop Held</label>
    <type>Checkbox</type>
</CustomField>