force-app/main/default/objects/Account/fields/Dallas_Workshop_Last__c.field-meta.xml
<CustomField>
    <fullName>Dallas_Workshop_Last__c</fullName>
    <inlineHelpText>Date of last Dallas Workshop</inlineHelpText>
    <label>Dallas Workshop (Last)</label>
    <type>Date</type>
</CustomField>