force-app/main/default/objects/Account/fields/Date_of_Last_Contractor_List__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Contractor_List__c</fullName>
    <description>Date last contractor list received task was added for account</description>
    <label>Date of Last Contractor List</label>
    <type>Date</type>
</CustomField>