force-app/main/default/objects/Account/fields/Date_of_Last_Contractor_List_Update__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Contractor_List_Update__c</fullName>
    <inlineHelpText>Periodically cleanup contractor list to remove contractors that are no longer working for the Client and add new contractors.</inlineHelpText>
    <label>Date of Last Contractor List Update</label>
    <type>Date</type>
</CustomField>