force-app/main/default/objects/Account/fields/Date_of_Last_Metrics_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Metrics_Meeting__c</fullName>
    <label>Date of Last Metrics Meeting</label>
    <type>Date</type>
</CustomField>