force-app/main/default/objects/Account/fields/Date_of_Last_User_Clean_Up__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_User_Clean_Up__c</fullName>
    <inlineHelpText>Remove employees who no longer need access to ISNetworld.</inlineHelpText>
    <label>Date of Last User Clean-Up</label>
    <type>Date</type>
</CustomField>