force-app/main/default/objects/Account/fields/Days_to_Agreement_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Agreement_Expiration__c</fullName>
    <formula>Agreement_Expiration_Date__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Agreement Expiration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>