force-app/main/default/objects/Account/fields/Days_to_Expire__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Expire__c</fullName>
    <formula>Renewal_Date__c - Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Expire</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>