force-app/main/default/objects/Account/fields/Differing_Services__c.field-meta.xml
<CustomField>
    <fullName>Differing_Services__c</fullName>
    <label>Differing Services</label>
    <type>TextArea</type>
</CustomField>