force-app/main/default/objects/Account/fields/Director_Higher_Annual_Metrics_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Director_Higher_Annual_Metrics_Meeting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Director/Higher @ Annual Metrics Meeting</label>
    <type>Checkbox</type>
</CustomField>