force-app/main/default/objects/Account/fields/EEI_Member__c.field-meta.xml
<CustomField>
    <fullName>EEI_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Edison Electric Institute - association of shareholder-owned electric companies</description>
    <inlineHelpText>Edison Electric Institute - association of shareholder-owned electric companies</inlineHelpText>
    <label>EEI Member</label>
    <type>Checkbox</type>
</CustomField>