force-app/main/default/objects/Account/fields/Estimated_Implementation_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Implementation_Date__c</fullName>
    <label>Estimated Implementation Date</label>
    <type>Date</type>
</CustomField>