force-app/main/default/objects/Account/fields/Executive_Level_Support__c.field-meta.xml
<CustomField>
    <fullName>Executive_Level_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Executive Level Support across multiple key stakeholder groups. Ensure each executive contact is added in Salesforce and involvement is updated accordingly.</inlineHelpText>
    <label>Executive Level Support</label>
    <type>Checkbox</type>
</CustomField>