force-app/main/default/objects/Account/fields/ExecutiveLevelSupport__c.field-meta.xml
<CustomField>
    <fullName>ExecutiveLevelSupport__c</fullName>
    <label>Executive Level Support</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>