force-app/main/default/objects/Account/fields/ExecutiveLevelSupportNotes__c.field-meta.xml
<CustomField>
    <fullName>ExecutiveLevelSupportNotes__c</fullName>
    <label>Executive Level Support Notes</label>
    <type>TextArea</type>
</CustomField>