force-app/main/default/objects/Account/fields/Expired_Contractors__c.field-meta.xml
<CustomField>
    <fullName>Expired_Contractors__c</fullName>
    <description>YTD number of expired contractors from ISNetworld Net New Report</description>
    <inlineHelpText>YTD number of expired contractors from ISNetworld Net New Report</inlineHelpText>
    <label>Expired Contractors (YTD)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>