force-app/main/default/objects/Account/fields/Facilities_Manager__c.field-meta.xml
<CustomField>
    <fullName>Facilities_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select account used as the Facilities Management Company for this record.</inlineHelpText>
    <label>Facilities Manager</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Facilities Manager)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>