force-app/main/default/objects/Account/fields/Fiscal_Year_Start_Month__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year_Start_Month__c</fullName>
    <inlineHelpText>Select the month that Fiscal Year starts for Account. Helpful for planning discussion in and around budget planning period for accounts.</inlineHelpText>
    <label>Fiscal Year Start (Month)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Months</valueSetName>
    </valueSet>
</CustomField>