force-app/main/default/objects/Account/fields/Fortune_500__c.field-meta.xml
<CustomField>
    <fullName>Fortune_500__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box is account is part of most recent Fortune 500 list</inlineHelpText>
    <label>Fortune 500</label>
    <type>Checkbox</type>
</CustomField>