force-app/main/default/objects/Account/fields/Fortune_Global_500__c.field-meta.xml
<CustomField>
    <fullName>Fortune_Global_500__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if Account is member of the most recent Fortune Global 500 List</inlineHelpText>
    <label>Fortune Global 500</label>
    <type>Checkbox</type>
</CustomField>