force-app/main/default/objects/Account/fields/Fortune_Global_500_Rank__c.field-meta.xml
<CustomField>
    <fullName>Fortune_Global_500_Rank__c</fullName>
    <label>Fortune Global 500 Rank</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>