force-app/main/default/objects/Account/fields/Functionality_Interest__c.field-meta.xml
<CustomField>
    <fullName>Functionality_Interest__c</fullName>
    <inlineHelpText>Select functionality that the Client has shown interest in the past</inlineHelpText>
    <label>Functionality Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ISN_Functionality_Tool</valueSetName>
    </valueSet>
</CustomField>