force-app/main/default/objects/Account/fields/Gift_Policy__c.field-meta.xml
<CustomField>
    <fullName>Gift_Policy__c</fullName>
    <description>Describes the client&#39;s policy for receiving gifts.</description>
    <inlineHelpText>What is the client&#39;s policy for receiving gifts?  What types of gifts/dollar amount is acceptable?</inlineHelpText>
    <label>Gift Policy</label>
    <type>TextArea</type>
</CustomField>