force-app/main/default/objects/Account/fields/Global_Account__c.field-meta.xml
<CustomField>
    <fullName>Global_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Global Account</label>
    <referenceTo>Global_Account__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>