force-app/main/default/objects/Account/fields/Grading_Showstoppers__c.field-meta.xml
<CustomField>
    <fullName>Grading_Showstoppers__c</fullName>
    <inlineHelpText>Select all that components that Client uses as a showstopper.</inlineHelpText>
    <label>Grading Showstoppers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Acknowledgement Form / OCSD</fullName>
            </value>
            <value>
                <fullName>Citations / Stop Work Orders</fullName>
            </value>
            <value>
                <fullName>Contracts / Agreements</fullName>
            </value>
            <value>
                <fullName>COR</fullName>
            </value>
            <value>
                <fullName>DART / LTF</fullName>
            </value>
            <value>
                <fullName>Evaluation Reports</fullName>
            </value>
            <value>
                <fullName>Experience Modifier</fullName>
            </value>
            <value>
                <fullName>Fatalities</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>NCMS Drug &amp; Alcohol</fullName>
            </value>
            <value>
                <fullName>Questionnaire (Excluding safety perf)</fullName>
            </value>
            <value>
                <fullName>Site Tracker</fullName>
            </value>
            <value>
                <fullName>TRIR / TRF</fullName>
            </value>
            <value>
                <fullName>Worker&#39;s Comp Rate</fullName>
            </value>
            <value>
                <fullName>Worker&#39;s Comp Status / WSIB Clearance</fullName>
            </value>
            <value>
                <fullName>Written Programs</fullName>
            </value>
            <value>
                <fullName>Written Program Scores in MSQ Bucket</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>