force-app/main/default/objects/Account/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <inlineHelpText>Select the overarching group level, e.g. Manufacturing, Energy, EMEA, etc.</inlineHelpText>
    <label>Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Group</valueSetName>
    </valueSet>
</CustomField>