force-app/main/default/objects/Account/fields/Has_Active_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Has_Active_Agreement__c</fullName>
    <label>Has Active Agreement(s)</label>
    <summaryFilterItems>
        <field>Contract_Agreement__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Terminated</value>
    </summaryFilterItems>
    <summaryForeignKey>Contract_Agreement__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>