force-app/main/default/objects/Account/fields/Has_C_E_Account_in_ISN__c.field-meta.xml
<CustomField>
    <fullName>Has_C_E_Account_in_ISN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has CE Account in ISN</label>
    <type>Checkbox</type>
</CustomField>